@@ -1,3 +1,13 @@
+2006-03-01  Andrey Kiselev  <dron@remotesensing.org>
+
+	* libtiff/tif_ojpeg.c: Set the ReferenceBlackWhite with the
+	TIFFSetField() method, not directly. As per bug
+
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=1043
+
+	* tools/ppm2tiff.c: Added support for PBM files as per bug
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=1044
+
 2006-02-27  Andrey Kiselev  <dron@remotesensing.org>
 
 	* libtiff/tif_write.c: Small code rearrangement in TIFFWriteScanline()
